<resources>
    <string name="app_name">JNUETC</string>
    <string name="prompt_sno">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">@string/action_sign_in_short</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">欢迎回来</string>
    <string name="invalid_sno">账号长度10</string>
    <string name="invalid_password">密码长度7–18</string>
    <string name="login_failed">登录失败</string>
    <string name="Location">园区</string>
    <string name="Date">报修时间</string>
    <string name="Name">报修人</string>
    <string name="Tel">电话</string>
    <string name="qq">QQ</string>
    <string name="Model">设备型号</string>
    <string name="Message">故障详情</string>
    <string name="College">学院</string>
    <string name="Grade">年级</string>
    <string name="Repairer">维修人</string>
    <string name="Mark">用户电脑水平评估</string>
    <string name="Service">服务内容</string>
    <string name="RepairMessage">故障描述及解决过程</string>
    <string name="Confirm">确定</string>
    <string name="Cancel">取消</string>
    <string name="DateAndName">时间-姓名</string>
    <string name="LocationAndId">园区-Id</string>
    <string name="LoginOut">退出登录</string>
    <string name="About">关于</string>
    <string name="OrderByTime">按报修时间排序</string>
    <string name="OrderByOrderTime">按接单时间排序</string>
    <string name="OrderByRepairTime">按反馈时间排序</string>
    <string name="TimeAsc">升序</string>
    <string name="TimeDesc">降序</string>
    <string name="navigation_drawer_open">打开筛选器</string>
    <string name="navigation_drawer_close">关闭筛选器</string>
    <string name="nav_header_subtitle">线上交流群459121889（点击进群）</string>
    <string name="nav_header_desc">社团图标</string>
    <string name="ForgetPassword">忘记密码</string>
    <string name="RepairData">反馈时间</string>
    <string name="ModifyPassword">修改密码</string>
    <string name="MakeOver">转让</string>
    <string name="Order">接单</string>
    <string name="OrderFail">接单失败</string>
    <string name="OrderSuccess">接单成功</string>
    <string name="title_activity_settings">设置</string>
    <string name="ModifyData">修改报修单信息</string>
    <string name="Modify">修改</string>
    <string name="ModifySuccess">修改成功</string>
    <string name="Finish">完成修改</string>
    <string name="nav_header_host">报修入口：https://jiangnan-dzjsb.club\n或者https://www.jiangnan-dzjsb.club\n（点击打开并复制）</string>
    <string name="HOST">https://jiangnan-dzjsb.club</string>
    <string name="Skip">跳过%d</string>
    <string name="NewData">未处理</string>
    <string name="Processing">处理中</string>
    <string name="Done">已维修</string>
    <string name="Finished">已处理</string>
    <string name="AboutMySelf">我的</string>
    <string name="NoData">暂无报修单</string>
    <string name="NoDataChangeLog">暂无日志</string>
    <string name="RepairRankingAndStatistic">维修排行及统计</string>
    <string name="DataDetails">报修单详情</string>
    <string name="Admin">控制台</string>
    <string name="InputRepairMessage">提交维修反馈</string>
    <string name="LocalNorth">北区</string>
    <string name="LocalSouth">南区</string>
    <string name="github">github：</string>
    <string name="githubAddress">https://github.com/1962247851/jnuetc_kotlin</string>
    <string name="FeedbackAddress">https://support.qq.com/product/72412</string>
    <string name="Search">搜索</string>
    <string name="SuggestionAndFeedback">建议与反馈</string>
    <string name="HistoryLog">历史更新日志</string>
    <string name="CancelSelectAll">取消全选</string>
    <string name="SelectByLocal">按园区筛选</string>
    <string name="WelcomePhoto">欢迎图片</string>
    <string name="Settings">设置</string>
    <string name="Loading">加载中，请稍后......</string>
    <string name="DeveloperQQ">1962247851</string>
    <string name="BackAgainToExit">再次点击退出</string>
    <string name="Exit">退出</string>
    <string name="ExitInputDialogTip">取消编辑？</string>
    <string name="ModifyWillNotSave">更改将不会保存</string>
    <string name="NothingModified">未更改信息</string>
    <string name="ScrollToTop">回到顶部</string>
    <string name="OrderTime">接单时间</string>
    <string name="FeedbackTime">反馈时间</string>
    <string name="RefreshSuccess">更新成功</string>
    <string name="RefreshFail">更新失败</string>
    <string name="Details">详情</string>
    <string name="Progress">进度</string>
    <string name="Log">日志</string>
    <string name="Feedback">维修反馈</string>
    <string name="FeedbackSuccess">反馈提交成功</string>
    <string name="FeedbackFail">反馈提交失败</string>
    <string name="DeleteForever">永久删除</string>
    <string name="DeleteSuccess">删除成功</string>
    <string name="DeleteFail">删除失败</string>
    <string name="SelectAll">选中所有</string>
    <string name="ClearAll">清除所有选中</string>
    <string name="HaveSelect">已选择</string>
    <string name="Delete">删除</string>
    <string name="ModifyFail">修改失败</string>
    <string name="DataEmpty">你忘记写点什么了</string>
    <string name="MakeOverSuccess">转让成功</string>
    <string name="Attention">注意</string>
    <string name="EnterDirectlySummaryOff">直接进入主界面</string>
    <string name="EnterDirectlySummaryOn">如果服务端有图片，则先展示一张图片，再进入主界面（可手动跳过）</string>
    <string name="EnterDirectlyTitle">开屏图片</string>
    <string name="PhotoShowTimeTitle">图片显示时间（包括渐变动画的1秒）</string>
    <string name="BootTitle">启动设置</string>
    <string name="MainTitle">主界面显示设置</string>
    <string name="MingJuTitle">名句设置</string>
    <string name="RankingTitle">统计设置</string>
    <string name="WelcomeAdministrator">当前权限：最高管理员</string>
    <string name="WelcomeNormalAdministrator">当前权限：管理员</string>
    <string name="DrawerShowText">永远相信美好的事情即将发生</string>
    <string name="DrawerShowTextTitle">我的界面侧栏展示文字</string>
    <string name="PushSuccess">推送成功</string>
    <string name="PushFail">推送失败</string>
    <string name="InvalidUrl">URL格式错误</string>
    <string name="SendPush">发布推送</string>
    <string name="DownloadUrlHint">下载链接</string>
    <string name="UpdateLogHint">更新内容（“。”相当于换行，句号请使用“.”）</string>
    <string name="PushTitleHint">只用于发布新版本通知，务必使用最新版发布通知，并提前准备好下载链接</string>
    <string name="RepairSwitch">报修开关</string>
    <string name="ExportDataToExcel">导出报修单数据到Excel文件</string>
    <string name="DayDPSwitch">每日一图开关</string>
    <string name="UploadDayDP">上传今日启动图片</string>
    <string name="RegisterSwitch">注册开关</string>
    <string name="Add">添加</string>
    <string name="NewCode">新的邀请码</string>
    <string name="UploadSuccess">上传成功，如果重启APP后看不到效果清下缓存就好了</string>
    <string name="UploadFail">上传失败</string>
    <string name="ExportSuccess">导出成功</string>
    <string name="ExportFail">导出失败</string>
    <string name="InsertCodeSuccess">添加成功</string>
    <string name="CopyToClipboard">%s 已复制到剪切板</string>
    <string name="InsertCodeFail">添加失败</string>
    <string name="NoLog">没有更新日志</string>
    <string name="OldPassword">原密码</string>
    <string name="NewPassword">新密码</string>
    <string name="NewPasswordAgain">请再输入一遍新密码</string>
    <string name="PasswordNotEqual">两次输入的密码不一样</string>
    <string name="PleaseCheckInput">请检查输入</string>
    <string name="PasswordModifySuccess">密码修改成功，请重新登录</string>
    <string name="PasswordModifyFail">密码修改失败</string>
    <string name="NewPasswordEqualOld">新密码不能与旧密码相同</string>
    <string name="ShowPassword">显示密码</string>
    <string name="HidePassword">隐藏密码</string>
    <string name="RankingRecyclerViewTitle">维修单数排行榜（只统计已反馈）</string>
    <string name="CheckingForUpdate">检查更新中</string>
    <string name="SettingSaveSuccessTip">设置保存成功，部分设置需重启APP后生效</string>
    <string name="TeamWork">团队协作</string>
    <string name="QQGroupUrl"><![CDATA[http://qm.qq.com/cgi-bin/qm/qr?k=Jc1GFeE-TU3kSawFNUwgVJ1Vmquuu5f1&group_code=459121889]]></string>
    <string name="WaitTimeTooLong">等待超过%d天</string>
    <string name="PhotoNumber">%d图</string>
    <string name="QueryHint">试试输入“有图”</string>
    <string name="TaskState">报修单状态</string>
    <string name="EnterSystemCall">进入拨号</string>
    <string name="EnterQQOrTim">进入QQ或Tim</string>
    <string name="Day">天</string>
    <string name="Hour">小时</string>
    <string name="Minute">分钟</string>
    <string name="Second">秒</string>
    <string name="TimerTitle">与你相识的第</string>
    <string name="LoadingPhoto">图片加载中</string>
    <string name="DatePattern">yyyy-MM-dd</string>
    <string name="FirstOpenTipTitle">欢迎使用JNUETC（kotlin重构版）</string>
    <string name="FirstOpenTipMessage"><![CDATA[权限说明：\n读写设备上的照片及文件用于展示启动图片和报修单的故障图片、选择照片上传到服务器作为当日的启动图片\n直接拨打电话用于省去复制电话号码粘贴到拨号界面的过程，最后拨号还是需要手动触发的\n\n注意：\n在非MIUI平台下，如果安卓版本大于等于6.0，需要授予电话和存储权限，否则推送服务会注册失败，意味着不能及时收到通知。\n\n点击确定后开始请求授权]]></string>
    <string name="KOTLIN">kotlin重构版</string>
    <string name="Download">下载</string>
    <string name="Theme">主题</string>
</resources>
